# benchmarking-segmentation-annotations-in-cv

./: .gitignore  README.md  config.py  contour_detector.py  frames_eval.py  images_eval.py  json_coco.py  main.py  pyproject.toml  segmenter.py  tracker_core_xmem2.py
XMem2/inference/: inference_core.py  memory_manager.py
XMem2/inference/data/: mask_mapper.py  video_reader.py
XMem2/inference/interact/: interactive_utils.py
XMem2/model/: modules.py  network.py
checkpoints/: download_models.py
utils/: contour_detector.py  converter.py  mask_display.py  overlay.py
