[project]
name = "benchmarking-segmentation-annotations-in-cv"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "opencv-python>=4.12.0.88",
    "pillow>=12.0.0",
    "scikit-image>=0.25.2",
    "scipy>=1.16.2",
]

[tool.uv.workspace]
members = [
    "venv",
]
