[project]
name = "benchmarking-segmentation-annotations-in-cv"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "opencv-python>=4.12.0.88",
    "pillow>=12.0.0",
    "psutil>=7.1.3",
    "requests>=2.32.5",
    "sam2>=1.1.0",
    "scikit-image>=0.25.2",
    "scipy>=1.16.2",
]

[tool.uv.workspace]
members = [
    "venv",
]


[project.optional-dependencies]
cpu = [
  "torch==2.8.0",
  "torchvision==0.23.0",
]
cu129 = [
  "torch==2.8.0",
  "torchvision==0.23.0",
]

[tool.uv]
conflicts = [
  [
    { extra = "cpu" },
    { extra = "cu129" },
  ],
]

[tool.uv.sources]
torch = [
  { index = "pytorch-cpu", extra = "cpu" },
  { index = "pytorch-cu129", extra = "cu129" },
]
torchvision = [
  { index = "pytorch-cpu", extra = "cpu" },
  { index = "pytorch-cu129", extra = "cu129" },
]

[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true

[[tool.uv.index]]
name = "pytorch-cu129"
url = "https://download.pytorch.org/whl/cu129"
explicit = true
